--- a/mini_project_data_analysis/mini_project.ipynb
+++ b/mini_project_data_analysis/mini_project.ipynb
@@ -806,8 +806,7 @@
     "master_df['actor_date_of_birth'] = master_df['actor_date_of_birth'].apply(convert_date)\n",
     "\n",
     "# Drop rows with NaT in 'actor_date_of_birth'\n",
-    "master_df = master_df.dropna(subset=['actor_date_of_birth'])\n",
-    "\n"
+    "master_df = master_df.dropna(subset=['actor_date_of_birth'])"
    ]
   }
  ],
